# deep-sos

./: .env.example  .env.prod.example  .gitignore  .gitleaks.toml  README.md  USCP_견적서_20260516.xlsx  USCP_견적서_부팅_20260513.xlsx  USCP_견적서_앤오픈_20260514.xlsx  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_sprint1_tables.py  0003_sprint2_cms_and_writes.py  0004_sprint3_membership_participation.py  0005_sprint5_performance_indexes.py  0006_sprint5_notifications.py  0007_v2_enums.py  0008_v2_users.py  0009_v2_issues.py  0010_v2_new_tables.py  0011_v2_notification_pref.py  0012_v2_pg_trgm_ext.py  0013_v2_success_policy.py  0014_v2_project_issues.py  0015_v2_community.py  0016_terms_hotfix.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  pagination.py
backend/app/application/: __init__.py  admin_user_service.py  attachment_service.py  audit_query_service.py  auth_service.py  banner_service.py  community_service.py  content_service.py  gatekeeping_service.py  issue_service.py  kpi_service.py  lifecycle_service.py  matching_service.py  mentor_service.py  mou_service.py  organization_service.py  program_service.py  project_post_service.py  project_service.py  student_team_service.py  success_story_service.py  terms_service.py
backend/app/core/: cache.py  config.py  database.py  logging.py  mailer.py  problem_details.py  rate_limit.py  security.py  (+2 more)
backend/scripts/: seed_e2e.py
backend/tests/: test_health.py
(+480 files in other folders)
